--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,8 @@
         gpg on your computer.
       </p>
 
+	  <p>Visit us on github: <a href="https://github.com/profullstack/encryptfiles-web">https://github.com/profullstack/encryptfiles-web</a></p>
+
       <form>
         <div class="field">
           <input
